Fix wrapping on results page

--- a/results.css
+++ b/results.css
@@ -66,7 +66,7 @@ body {
 
 .resp {
     display: inline-block;
-    white-space: nowrap;
+    white-space:pre-line;
 }
 
 .container #form td {
